Fixed cart remove and input on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -843,4 +843,8 @@ select {
   .champs__header--title {
     font-size: 22px;
   }
+
+  .cart__champ--remove {
+    z-index: 20;
+  }
 }
